--- a/account.html
+++ b/account.html
@@ -36,7 +36,12 @@
       background: transparent;
       font-family: 'Montserrat', sans-serif;
     }
-
+nav form a{
+margin:1px;
+    border-radius: 23px;
+box-shadow:  1px 1px 2px #e3e3e3,
+             -1px -1px 2px #ffffff;
+}
     .container div button{
       background-color: #4CAF50;
       color: white;
@@ -68,9 +73,6 @@
         width:45px;
         height:45px;
         border-radius:50%;
-    }
-    nav form a{
-        margin:5px;
     }
     #navbar{
         position: absolute;
@@ -131,10 +133,10 @@ aria-label="Toggle navigation">
 </nav>
 
 <nav class="navbar bg-body-tertiary-dark" data-bs-theme="dark">
-  <form class="container-fluid justify-content-start">
+  <form class="container-fluid justify-content-between">
     <a class="btn btn-sm btn-outline-secondary" href="index.html"><img src="home.png" alt=""></a>
-    <a class="btn btn-outline-success me-2" href="account.html"><img src="account.png" alt=""></a>
-    <a class="btn btn-sm btn-outline-secondary" href="dashboard.html"><img src="dashboard.jpeg" alt=""></a>
+    <a class="btn btn-outline-light me-2" href="account.html"><img src="account.png" alt=""></a>
+    <a class="btn btn-sm btn-outline-secondary" href="dashboard.html"><img src="dashboard.png" alt=""></a>
     <a class="btn btn-sm btn-outline-secondary" href="interact.html"><img src="interact.png" alt=""></a>
     <a class="btn btn-sm btn-outline-secondary" href="games.html"><img src="games.png" alt=""></a>
   </form>
