--- a/games.html
+++ b/games.html
@@ -15,15 +15,19 @@
           height:45px;
           border-radius:50%;
       }
-      nav form a{
-          margin:5px;
-      }
+     
       #kusanagi{
           font-family: 'Rubik Doodle Shadow', system-ui;
 color: white;
       }
+      nav form a{
+margin:1px;
+    border-radius: 23px;
+box-shadow:  1px 1px 2px #e3e3e3,
+             -1px -1px 2px #ffffff;
+}
   </style>
-  <title>Dashboard</title>
+  <title>Games</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary-dark" data-bs-theme="dark">
@@ -51,12 +55,12 @@ aria-label="Toggle navigation">
 </nav>
 
 <nav class="navbar bg-body-tertiary-dark" data-bs-theme="dark">
-  <form class="container-fluid justify-content-start">
+  <form class="container-fluid justify-content-between">
     <a class="btn btn-sm btn-outline-secondary" href="index.html"><img src="home.png" alt=""></a>
     <a class="btn btn-sm btn-outline-secondary" href="account.html"><img src="account.png" alt=""></a>
-    <a class="btn btn-sm btn-outline-secondary" href="dashboard.html"><img src="dashboard.jpeg" alt=""></a>
+    <a class="btn btn-sm btn-outline-secondary" href="dashboard.html"><img src="dashboard.png" alt=""></a>
     <a class="btn btn-sm btn-outline-secondary" href="interact.html"><img src="interact.png" alt=""></a>
-    <a class="btn btn-outline-success me-2" href="games.html"><img src="games.png" alt=""></a>
+    <a class="btn btn-outline-light me-2" href="games.html"><img src="games.png" alt=""></a>
   </form>
 </nav>
 
