--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#222">
     <link rel="icon" type="image/x-icon" href="/Kusanagi/Kusanagi.jpeg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">    
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -91,16 +92,20 @@ img{
     height:45px;
     border-radius:50%;
 }
+nav form a{
+margin:1px;
+    border-radius: 23px;
+box-shadow:  1px 1px 2px #e3e3e3,
+             -1px -1px 2px #ffffff;
+}
+nav form{
+    width:350px;
+}
 #navbar{
       position: sticky;
       top:0;
    /* background: linear-gradient(-229deg, #fbd52d, #e53a7b, #ff70af, #5fa8f5);*/
 }
-nav form a{
-    padding:0;
-    margin:0 5px;
-}
-
     </style>
     
   
@@ -132,11 +137,11 @@ aria-label="Toggle navigation">
   </div>
 </nav>
 
-<nav class="navbar bg-body-tertiary-dark" data-bs-theme="dark" style="margin:0 auto">
-  <form class="container-fluid justify-content-start" style="margin:0 auto">
-    <a class="btn btn-outline-success me-2" href="index.html"><img src="home.png" alt=""></a>
+<nav class="navbar bg-body-tertiary-dark" data-bs-theme="dark">
+  <form class="container-sm justify-content-evenly">
+    <a class="btn btn-outline-light me-2" href="index.html"><img src="home.png" alt=""></a>
     <a class="btn btn-sm btn-outline-secondary" href="account.html"><img src="account.png" alt=""></a>
-    <a class="btn btn-sm btn-outline-secondary" href="dashboard.html"><img src="dashboard.jpeg" alt=""></a>
+    <a class="btn btn-sm btn-outline-secondary" href="dashboard.html"><img src="dashboard.png" alt=""></a>
     <a class="btn btn-sm btn-outline-secondary" href="interact.html"><img src="interact.png" alt=""></a>
     <a class="btn btn-sm btn-outline-secondary" href="games.html"><img src="games.png" alt=""></a>
   </form>
