--- a/account.html
+++ b/account.html
@@ -120,7 +120,7 @@ aria-label="Toggle navigation">
 
 <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
   <div class="offcanvas-header">
-    <h5 class="offcanvas-title" id="kusanagi">K U S A N A G I</h5>
+    <h5 class="offcanvas-title" id="kusanagi">ACCOUNT</h5>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
