--- a/dashboard.html
+++ b/dashboard.html
@@ -31,7 +31,7 @@ box-shadow:  1px 1px 2px #e3e3e3,
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary-dark" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" id="kusanagi" href="#">K U S A N A G I</a>
+    <a class="navbar-brand" id="kusanagi" href="#">DASHBOARD</a>
       
     </button>
 <button class="btn btn-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample"
