--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ font-family: 'Rubik Doodle Shadow', system-ui;
     overscroll-behaviour-x:contain;
     scroll-snap-type:x-mandatory;
     scrollbar-width:none;
-    overflow-y: auto;
+    overflow: auto;
     background-color:#222;
 }
 section{
@@ -115,7 +115,7 @@ nav form{
     
     <nav class="navbar navbar-expand-lg bg-body-tertiary-dark" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" id="kusanagi" href="#">K U S A N A G I</a>
+    <a class="navbar-brand" id="kusanagi" href="#rules">K U S A N A G I</a>
       
     </button>
 <button class="btn btn-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample"
